--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="container">
     <div class="wrapper">
-      <img class="qr-code" src="/images/image-qr-code.png">
+      <img class="qr-code" src="/qr-code/images/image-qr-code.png">
       <h3 class="title">
         Improve your front-end <br>skills by building projects
       </h3>
