--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -7,24 +7,25 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 
   <title>Frontend Mentor | QR code component</title>
 </head>
 
 <body>
   <div class="container">
-    <div class="wrapper">
-      <img class="qr-code" src="/Frontend-Mentor/qr-code/images/image-qr-code.png">
-      <h3 class="title">
-        Improve your front-end <br>skills by building projects
-      </h3>
-      <p class="content">
-        Scan the QR code to visit Frontend <br>Mentor and take your coding skills to <br>the next level
-      </p>
-    </div>
+    <img class="qr-code" src="/Frontend-Mentor/qr-code/images/image-qr-code.png">
+    <h3 class="title">
+      Improve your front-end <br>skills by building projects
+    </h3>
+    <p class="content">
+      Scan the QR code to visit Frontend <br>Mentor and take your coding skills to <br>the next level
+    </p>
   </div>
 </body>
 
