--- a/product-preview-card/index.html
+++ b/product-preview-card/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <div class="container">
-    <img class="product-img" src="/images/image-product-desktop.jpg" alt="">
+    <img class="product-img" src="Frontend-Mentor/product-preview-card/images/image-product-desktop.jpg">
     <div class="product-content">
       <p class="product-category">
         Perfume
