--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <div class="container">
-    <img class="qr-code" src="/Frontend-Mentor/qr-code/images/image-qr-code.png">
+    <img class="qr-code" src="./images/image-qr-code.png">
     <h3 class="title">
       Improve your front-end <br>skills by building projects
     </h3>
